MR Java 11 Uplift
Signed-off-by: seanfos <sean.osullivan@est.tech>
Change-Id: I0da010ebc43b18222c1153ebf4478eacd740f65d
Issue-ID: DMAAP-1385